fix: render overflow and blurry renders

--- a/src/style.css
+++ b/src/style.css
@@ -100,13 +100,6 @@ button:focus-visible {
   }
 }
 
-canvas {
-  display: flex;
-  margin: 10px;
-  max-width: 100%;
-  max-height: 100%;
-}
-
 .navbar {
   position: relative;
   display: flex;
@@ -117,10 +110,10 @@ canvas {
   height: 50px;
   padding: 6px;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  color: #5a5c6b;
 }
 
 .navbar .title {
-  color: #5a5c6b;
   font-size: 30px;
   font-weight: 600;
   padding: 12px;
@@ -193,4 +186,20 @@ canvas {
 #overlay.active {
   display: flex;
   transform: translate(-50%, -50%) scale(1);
+}
+
+#pdf-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+canvas {
+  max-width: 100%;
+  max-height: 100%;
 }
